Edits done in class

--- a/index.html
+++ b/index.html
@@ -11,22 +11,26 @@
     <link rel="stylesheet" href="style.css" media="all">
   </head>
 
-  <body>
+  <body id="home">
   	
   	<!-- start Navbar with logo and primary navigation -->
   	
-  	<div class="navbar clearfix">
-	  	<div class="logo">Logo</div>
-	  	<a href="index.html">Home</a>
-	  	<a href="about.html">About</a>
-	  	<a href="contact.html">Contact</a>
-  	</div>
+  	<header>
+	  	<div class="navbar clearfix">
+		  	<div class="logo">Logo</div>
+		  	<div class="nav">
+			  	<a href="index.html">Home</a>
+			  	<a href="about.html">About</a>
+			  	<a href="contact.html">Contact</a>
+		  	</div>
+	  	</div>
+  	</header>
   	
   	<!-- end Navbar with logo and primary navigation -->
   	
   	<!-- start Hero Block -->
   	
-  	<div class="hero">
+  	<div class="col hero">
 	  	<h1>Hero Headline Goes Here</h1>
   	</div>
   	
@@ -36,12 +40,12 @@
   	
   	<div class="col clearfix">
 	  	
-	  	<div class="col one">
+	  	<div class="one">
 		  	<h2>Column Headline</h2>
 		  	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 	  	</div>
 	  	
-	  	<div class="col two">
+	  	<div class="two">
 		  	<h2>Column Headline</h2>
 		  	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 	  	</div>
@@ -52,11 +56,13 @@
   	
   	<!-- start footer -->
   	
-  	<div class="footer">
-	  	<a href="index.html">Home</a>
-	  	<a href="about.html">About</a>
-	  	<a href="contact.html">Contact</a>
+  	<footer>
+	  	<nav>
+		  	<a href="index.html">Home</a>
+		  	<a href="about.html">About</a>
+		  	<a href="contact.html">Contact</a>
+	  	</nav>
 	  	<p>Copyright 2015 - Your Name Inc.</p>
-  	</div>
+  	</footer>
   </body>
 </html>
