--- a/lady_cheaterly.html
+++ b/lady_cheaterly.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="style-lady_cheaterly.css">
   </head>
 
-  <body>
+  <body id="home">
 
   <header>
 	  <div class="row clearfix">
